refactor: make integration test source code reside in their own independent directory
setup maven build helper plugin